test/good/arrays/decl01.px

a: [Int] = [1]
print a[0]
