test/bad/arrays/decl03.px

a: [Int]
b: [[Rat]] = [a]
